[package]
name = "stacks"
version = "0.10.0"
description = "Stacks"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["clipboard-write-text", "global-shortcut", "macos-private-api", "process-command-api", "shell-open", "system-tray", "updater", "window-hide"] }
tauri-plugin-spotlight = { path = "../vendored/tauri-plugin-spotlight" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scru128 = { version = "2.2.0", features = ["serde"] }
log = "^0.4"
base64 = "0.21.2"
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["time", "process"] }
reqwest = { version = "0.11", features = ["json"] }
cacache = { version = "11.6.0", default-features = false, features = ["tokio-runtime"] }
sled = "0.34.7"
bincode = "1.3.3"
ssri = "9.0.0"
objc = "0.2.7"
cocoa = "0.25.0"
tiktoken-rs = "0.5.0"
dirs = "5.0.1"
tantivy = "0.20.2"
chrono = "0.4.26"
async-openai = "0.14.0"
futures = "0.3.28"

[dev-dependencies]
indoc = "1.0.7"
tempfile = "3.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
